tests/ui/traits/new-solver/async.fail.stderr
error[E0271]: type mismatch resolving `<[async block@$DIR/async.rs:12:17: 12:25] as Future>::Output == i32`
  --> $DIR/async.rs:12:17
   |
LL |     needs_async(async {});
   |     ----------- ^^^^^^^^ types differ
   |     |
   |     required by a bound introduced by this call
   |
note: required by a bound in `needs_async`
  --> $DIR/async.rs:8:31
   |
LL | fn needs_async(_: impl Future<Output = i32>) {}
   |                               ^^^^^^^^^^^^ required by this bound in `needs_async`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0271`.
